results/SVCOMP/specgen/log-instanceof1-2024_02_27_16_09_17.txt
class Main {
  //@ ensures \result <==> args instanceof Object;
  public static boolean f() {
    return args instanceof Object;
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof1.java:2: error: cannot find symbol
  //@ ensures \result <==> args instanceof Object;
                           ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof1.java:4: error: cannot find symbol
    return args instanceof Object;
           ^
  symbol:   variable args
  location: class Main
2 errors

class Main {
  //@ ensures \result <==> args instanceof Object;
  public static boolean f() {
    return false; // Placeholder return statement
  }
}
/home/max/Documents/JMLGPT/tmp/instanceof1.java:2: error: cannot find symbol
  //@ ensures \result <==> args instanceof Object;
                           ^
  symbol:   variable args
  location: class Main
1 error

class Main {
  //@ ensures \result <==> false;
  public static boolean f() {
    return false; // Placeholder return statement
  }
}

